Collapse(折疊事件)_新增文字內容+圖片排版

--- a/072001.html
+++ b/072001.html
@@ -30,10 +30,19 @@
 
                 <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
                     data-parent="#accordionExample">
-                    <div class="card-body">
-                            親近大自然 <code>5天4夜</code> 
-                        <div class="img">
+                    <div class="row">
+
+                        <div class="col-6">
                             <img src="https://picsum.photos/id/10/200/300" alt="">
+                        </div>
+                        <div class="col-6">
+                            <br>
+                            <p class="h3">親近大自然 <code>5天4夜</code></p>
+                            <p class="text-info">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque, ut sunt corporis ab
+                                voluptatem, aperiam nostrum minus blanditiis aspernatur provident optio fuga ipsa, amet
+                                necessitatibus sit quidem ipsum iusto quasi? Blanditiis explicabo laudantium eius illo!
+                                Nemo necessitatibus ipsa labore excepturi, beatae esse nisi unde ea iste hic ipsam,
+                                mollitia alias.</p>
                         </div>
                     </div>
                 </div>
@@ -67,10 +76,10 @@
                 </div>
                 <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
                     <div class="card-body">
-                       花東之旅 ...
-                       <div class="img">
-                        <img src="https://picsum.photos/id/103/200/300" alt="">
-                    </div>
+                        花東之旅 ...
+                        <div class="img">
+                            <img src="https://picsum.photos/id/103/200/300" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
