--- a/072001.html
+++ b/072001.html
@@ -38,7 +38,8 @@
                         <div class="col-6">
                             <br>
                             <p class="h3">親近大自然 <code>5天4夜</code></p>
-                            <p class="text-info">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque, ut sunt corporis ab
+                            <p class="text-info">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque, ut
+                                sunt corporis ab
                                 voluptatem, aperiam nostrum minus blanditiis aspernatur provident optio fuga ipsa, amet
                                 necessitatibus sit quidem ipsum iusto quasi? Blanditiis explicabo laudantium eius illo!
                                 Nemo necessitatibus ipsa labore excepturi, beatae esse nisi unde ea iste hic ipsam,
@@ -101,16 +102,38 @@
         <div class="col">
             <div class="collapse multi-collapse" id="multiCollapseExample1">
                 <div class="card card-body">
-                    Some placeholder content for the first collapse component of this multi-collapse example. This panel
-                    is hidden by default but revealed when the user activates the relevant trigger.
+                    <div class="row">
+                        <div class="col-6">
+                            <img src="https://picsum.photos/id/10/200/300" alt="">
+                        </div>
+                        <div class="col-6">
+                            <br>
+                            <p class="h3">親近大自然 <code>5天4夜</code></p>
+                            <p class="text-info">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque, ut
+                                sunt corporis ab
+                                voluptatem, aperiam nostrum minus blanditiis aspernatur provident optio fuga ipsa, amet
+                                necessitatibus sit quidem ipsum iusto quasi? Blanditiis explicabo laudantium eius illo!
+                                Nemo necessitatibus ipsa labore excepturi, beatae esse nisi unde ea iste hic ipsam,
+                                mollitia alias.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="col">
             <div class="collapse multi-collapse" id="multiCollapseExample2">
                 <div class="card card-body">
-                    Some placeholder content for the second collapse component of this multi-collapse example. This
-                    panel is hidden by default but revealed when the user activates the relevant trigger.
+                    <div class="row">
+                        <div class="col-6">
+                            <img src="https://picsum.photos/id/103/200/300" alt="">
+                        </div>
+                        <div class="col-6">
+                            <br>
+                            <p class="h3">美麗花東 <code>5天4夜</code></p>
+                            <p class="text-info">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos iste
+                                animi perferendis sed temporibus nostrum possimus ducimus itaque est doloremque?</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
