--- a/072003.html
+++ b/072003.html
@@ -16,7 +16,7 @@
     <!-- nav -->
     <!-- 補充 navbar 加入 『fixed-top』可以把導覽列表定在最上面 -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="#"><i class="fa-solid fa-globe"></i>&nbsp;Hello</a>
+        <a class="navbar-brand" href="#"><i class="fa-solid fa-globe text-success"></i>&nbsp;Hello</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -27,13 +27,13 @@
               <a class="nav-link" href="#card">卡片區 <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#map"><i class="fa-solid fa-map-location-dot"></i>&nbsp;地圖</a>
+              <a class="nav-link" href="#map"><i class="fa-solid fa-map-location-dot text-warning"></i>&nbsp;地圖</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#Carousel">幻燈片</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#page"><i class="fa-solid fa-message"></i>&nbsp;文字內容</a>
+              <a class="nav-link" href="#page"><i class="fa-solid fa-message text-warning"></i>&nbsp;文字內容</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
@@ -77,7 +77,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <a href="#" class="btn btn-info">Go somewhere</a>
                     </div>
                 </div>
             </div>
@@ -88,7 +88,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="#" class="btn btn-info">Go somewhere</a>
                     </div>
                 </div>
             </div>
@@ -99,7 +99,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="#" class="btn btn-info">Go somewhere</a>
                     </div>
                 </div>
             </div>
@@ -110,7 +110,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="#" class="btn btn-info">Go somewhere</a>
                     </div>
                 </div>
             </div>
@@ -198,6 +198,10 @@
         <br>
         <hr>
         <br>
+        <!-- TOP 導回最上面 -->
+        <div class="fixed-bottom text-right display-3">
+            <a href=""><i class="fa-solid fa-angles-up text-danger bg-light" style="font-size:40px;padding:10px;"></i></a>
+        </div>
     <!-- js jq bs -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
